<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/SystemUISpacer"/>

    <!-- Register title -->
    <TextView
        android:id="@+id/RegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/SystemUISpacer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/RegisterSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerSubtitle"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/RegisterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/RegisterSubtitle"
        android:id="@+id/TitleFormSpacer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleFormSpacer"
        android:id="@+id/RegisterUsernameLayout">
        <!-- Label for username input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerUsernameLabel"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="username,emailAddress"
            android:hint="@string/registerUsernameHint"
            android:inputType="text"
            android:id="@+id/RegisterUsernameInput"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterUsernameLayout"
        android:id="@+id/RegisterEmailLayout">
        <!-- Label for email input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerEmailLabel"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:hint="@string/registerEmailHint"
            android:inputType="textEmailAddress"
            android:id="@+id/RegisterEmailInput"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RegisterPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailLayout">
        <!-- Label for password input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerPasswordLabel"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:id="@+id/RegisterPasswordInnerLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="password"
                android:hint="@string/registerPasswordHint"
                android:inputType="textPassword"
                android:id="@+id/RegisterPasswordInput"/>

            <CheckBox
                android:id="@+id/RegisterPasswordToggle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/ic_eye"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:contentDescription="@string/registerPasswordToggleDescription"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Confirm password -->
    <LinearLayout
        android:id="@+id/RegisterConfirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterPasswordLayout">
        <!-- Label for confirm password input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerConfirmPasswordLabel"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:id="@+id/RegisterConfirmPasswordInnerLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="password"
                android:hint="@string/registerConfirmPasswordHint"
                android:inputType="textPassword"
                android:id="@+id/RegisterConfirmPasswordInput"/>

            <CheckBox
                android:id="@+id/RegisterConfirmPasswordToggle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/ic_eye"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:contentDescription="@string/registerConfirmPasswordToggleDescription"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/registerButton"
        android:id="@+id/RegisterButton"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/RegisterConfirmPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/loginButton"
        android:id="@+id/LoginButton"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>